Fix logo path in index.html for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,41 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>N2 Insights — Coming Soon</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="n2insights - Exploring Analytics, AI, and Data Science Trends, Projects, and Thought Leadership">
+  <title>n2insights</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
-    body {
-      background: #0d0d0d;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      height: 100vh;
-      margin: 0;
-    }
-    h1 {
-      font-size: 3rem;
-      margin: 0;
-    }
-    p {
-      font-size: 1.25rem;
-      color: #cccccc;
-      margin-top: 1rem;
-    }
-    footer {
-      position: absolute;
-      bottom: 20px;
-      font-size: 0.875rem;
-      color: #666;
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+    header, footer { background: #000; color: #fff; text-align: center; padding: 1em 0; }
+    nav { background: #f0f0f0; padding: 1em; text-align: center; }
+    nav a { margin: 0 1em; text-decoration: none; color: #333; font-weight: bold; }
+    section { padding: 2em; max-width: 1000px; margin: auto; }
+    img.logo { width: 200px; margin: 1em 0; }
+    h1, h2 { color: #f90; }
+    article { margin-bottom: 2em; }
   </style>
 </head>
 <body>
-  <h1>🚧 N2 Insights</h1>
-  <p>Our site is coming soon. Stay tuned!</p>
-  <footer>© 2025 N2 Insights</footer>
+  <header>
+    <img src="imgs/400JpgdpiLogo.jpeg" alt="n2insights logo" class="logo">
+    <h1>n2insights</h1>
+    <p>Analytics | AI | Data Science | Insights</p>
+  </header>
+
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#articles">Articles</a>
+    <a href="#publications">Publications</a>
+    <a href="#projects">Projects</a>
+    <a href="#about">About n2i</a>
+  </nav>
+
+  <section id="home">
+    <h2>Welcome to n2insights</h2>
+    <p>We are a hub for exploring cutting-edge analytics, artificial intelligence trends, and impactful data science use cases. Our mission is to drive innovation and insight through thought leadership, practical applications, and forward-looking ideas.</p>
+  </section>
+
+  <section id="articles">
+    <h2>Latest Articles</h2>
+    <article>
+      <h3>The Rise of Agentic AI: Implications for Industry</h3>
+      <p>Exploring the impact of autonomous AI agents in healthcare, finance, and logistics.</p>
+    </article>
+    <article>
+      <h3>LLM Fine-Tuning vs. RAG: Choosing the Right Strategy</h3>
+      <p>We break down when to fine-tune your model and when retrieval-augmented generation makes more sense.</p>
+    </article>
+  </section>
+
+  <section id="publications">
+    <h2>Publications</h2>
+    <ul>
+      <li><strong>2025 AI in Practice Report</strong> – Benchmarking AI adoption in government and private sector</li>
+      <li><strong>Analytics for Impact</strong> – White paper on predictive analytics in healthcare systems</li>
+    </ul>
+  </section>
+
+  <section id="projects">
+    <h2>Projects</h2>
+    <ul>
+      <li><strong>CMS Cost Measure Attribution Engine</strong>: Using AI to automate attribution of patients to provider groups</li>
+      <li><strong>Pharma Invoice Validator</strong>: LLM-driven platform for courier and carrier invoice validation against rate sheets</li>
+      <li><strong>LLM RAG Assistant for Clinical Guidelines</strong>: Transforming PDFs into intelligent knowledge tools</li>
+    </ul>
+  </section>
+
+  <section id="about">
+    <h2>About n2i</h2>
+    <p>n2insights (n2i) was founded on the belief that the most powerful insights come from the intelligent application of data. With deep roots in healthcare, government, and technology, our team delivers AI and analytics solutions that make a difference.</p>
+    <p>We are builders, thinkers, and innovators who turn data into decisions.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 n2insights. All rights reserved.</p>
+  </footer>
 </body>
 </html>
