Fix logo path in index.html for GitHub Pages again

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>n2insights</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header, footer { background: #000; color: #fff; text-align: center; padding: 1em 0; }
-    nav { background: #f0f0f0; padding: 1em; text-align: center; }
-    nav a { margin: 0 1em; text-decoration: none; color: #333; font-weight: bold; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #ffffff; color: #000; }
+    header, footer { background: #fff; color: #000; text-align: center; padding: 1em 0; }
+    nav { background: #f4f4f4; padding: 1em; text-align: center; }
+    nav a { margin: 0 1em; text-decoration: none; color: #000; font-weight: bold; }
+    nav a:hover { text-decoration: underline; }
     section { padding: 2em; max-width: 1000px; margin: auto; }
     img.logo { width: 200px; margin: 1em 0; }
     h1, h2 { color: #f90; }
@@ -38,38 +39,37 @@
   </section>
 
   <section id="articles">
-    <h2>Latest Articles</h2>
+    <h2>Articles</h2>
     <article>
-      <h3>The Rise of Agentic AI: Implications for Industry</h3>
-      <p>Exploring the impact of autonomous AI agents in healthcare, finance, and logistics.</p>
+      <h3>How AI Is Redefining Decision-Making in Real Time</h3>
+      <p>Explore how predictive models and autonomous agents are changing enterprise workflows.</p>
     </article>
     <article>
-      <h3>LLM Fine-Tuning vs. RAG: Choosing the Right Strategy</h3>
-      <p>We break down when to fine-tune your model and when retrieval-augmented generation makes more sense.</p>
+      <h3>10 AI Use Cases Every Analyst Should Know in 2025</h3>
+      <p>From anomaly detection to NLP in operations—AI is reshaping the role of data professionals.</p>
     </article>
   </section>
 
   <section id="publications">
     <h2>Publications</h2>
     <ul>
-      <li><strong>2025 AI in Practice Report</strong> – Benchmarking AI adoption in government and private sector</li>
-      <li><strong>Analytics for Impact</strong> – White paper on predictive analytics in healthcare systems</li>
+      <li><strong>AI for Public Health Impact (2025)</strong> – A deep dive into population analytics and early warning systems</li>
+      <li><strong>Data Science in Action</strong> – Real-world outcomes from predictive modeling in government and industry</li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <ul>
-      <li><strong>CMS Cost Measure Attribution Engine</strong>: Using AI to automate attribution of patients to provider groups</li>
-      <li><strong>Pharma Invoice Validator</strong>: LLM-driven platform for courier and carrier invoice validation against rate sheets</li>
-      <li><strong>LLM RAG Assistant for Clinical Guidelines</strong>: Transforming PDFs into intelligent knowledge tools</li>
+      <li><strong>Care Cost Attribution AI</strong>: Assigning provider responsibility using NLP and claim timelines</li>
+      <li><strong>Invoice Audit Bot</strong>: Validating delivery invoices using LLMs and dynamic rate lookups</li>
+      <li><strong>Clinical Guideline Navigator</strong>: AI assistant that parses DoD/VA PDFs for key care directives</li>
     </ul>
   </section>
 
   <section id="about">
     <h2>About n2i</h2>
-    <p>n2insights (n2i) was founded on the belief that the most powerful insights come from the intelligent application of data. With deep roots in healthcare, government, and technology, our team delivers AI and analytics solutions that make a difference.</p>
-    <p>We are builders, thinkers, and innovators who turn data into decisions.</p>
+    <p>n2insights (n2i) is a data science and AI consultancy built for the age of rapid innovation. We focus on turning emerging tech into applied intelligence—from LLM applications to cost optimization strategies. Based on decades of collective experience in health, finance, and federal spaces, our mission is to deliver insight you can act on.</p>
   </section>
 
   <footer>
